<resources>
    <string name="app_name">Show Pro</string>

    <string name="user">User :</string>
    <string name="pass">Password :</string>
    <string name="login">Login</string>
    <string name="guest">Guest</string>
    <string name="register">Register</string>
    <string name="name">Name :</string>
    <string name="surname">Surname :</string>
    <string name="address">Address :</string>
    <string name="email">Email :</string>
    <string name="save">Save Data</string>
    <string name="title_activity_detail_promotion">Map</string>

</resources>
